kube/digital_ocean/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway-http
spec:
  gatewayClassName: cilium
  # defaultScope: All
  # useDefaultGateways: All
  listeners:
    - name: http-danicos.me
      protocol: HTTP
      port: 80
      hostname: "ape.danicos.me"
      allowedRoutes:
        namespaces:
          from: All
      # - name: https-danicos.me
      #   protocol: HTTPS
      #   port: 443
      #   hostname: "ape.danicos.me"
      #   allowedRoutes:
      #     namespaces:
      #       from: All
      # tls:
      #   mode: Terminate
      #   certificateRefs:
      #     - kind: Secret
      #       name: ape-wildcard-cert

      # - name: http-danicos.dev
      #   protocol: HTTP
      #   port: 80
      #   hostname: "*.danicos.dev"
      #   allowedRoutes:
      #     namespaces:
      #       from: All
      # - name: https-danicos.dev
      #   protocol: HTTPS
      #   port: 443
      #   hostname: "*.danicos.dev"
      #   allowedRoutes:
      #     namespaces:
      #       from: All
      # tls:
      #   mode: Terminate
      #   certificateRefs:
      #     - kind: Secret
      #       name: ape-wildcard-cert
# I want wild card TLS termination for *.danicos.me
# I want wild card TLS termination for *.danicos.dev
# Defined in these listeners, with TLS temination means that once the Certificate is validated.
# Only HTTP is going to be passed on downstream.

# In the HTTP Route resource definition I set up the Subdomains.
